[package]
name = "minecraft-pdb-mgr"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.x"
env_logger = "0.11.x"
futures = "0.3.x"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.0.0", features = ["runtime", "derive", "jsonpatch"] }
log = "0.4.x"
mc-query = "2.0.0"
percentage = "0.1.0"
rand = "0.9.x"
schemars = "1.0.x"
serde = "1.0.x"
serde_json = "1.0.x"
signal-hook = "0.3.x"
signal-hook-tokio = { version = "0.3.x", features = ["futures-v0_3"] }
tokio = { version = "1.46.x", features = ["full"] }
